--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -140,6 +140,10 @@
     border-left: 1px solid #0B3E58;
 }
 
+.header-activity-item:hover {
+    background-color: #e9e9e9;
+}
+
 .header-activity-btn .btn {
     background: linear-gradient(to bottom, #b2f1c1, #34b267);
     border-radius: 22px;
@@ -286,54 +290,114 @@
 .map-body {
     width: calc(100% - 23px);
 }
+
 /* Search Content Start */
 .search-popup {
     bottom: 0;
-    left: 15%;
+    left: 450px;
     width: 425px;
     max-width: 100%;
 }
+
 .search-popup .accordion-button {
     background: linear-gradient(180deg, #FFF -57.5%, #0B3E58 100%);
 }
-.search-popup .accordion-button::after{
+
+.search-popup .accordion-button::after {
     display: none;
 }
+
 .search-heading {
     width: 60%;
 }
+
 .search-popup .accordion-body {
     background: linear-gradient(to bottom, #F5F5F5, #999999);
 }
+
 .search-input {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -38%);
 }
-.search-popup .nav-link{
+
+.search-popup .nav-link {
     color: #0B3E58;
     border-radius: 20px;
     border: 1px solid #0B3E58;
 }
-.search-popup .nav-link.active,.search-popup .nav-link:hover {
+
+.search-popup .nav-link.active,
+.search-popup .nav-link:hover {
     color: #fff;
-    background-color: #0B3E58;  
-    border: 1px solid #0B3E58; 
+    background-color: #0B3E58;
+    border: 1px solid #0B3E58;
 }
-.search-input input{
+
+.search-input input {
     border: 1px solid #0B3E58;
     border-radius: 20px;
 }
-.search-input input::placeholder{
+
+.search-input input::placeholder {
     color: #999999;
 }
+
 .search-popup .accordion-button:focus {
     box-shadow: none;
 }
+
 .search-popup .tab-pane {
     border: 1px solid #0B3E58;
     border-radius: 5px;
 }
+
+.search-map {
+    height: 247px;
+}
+
+.search-body-border {
+    background: linear-gradient(180deg, #FFF -57.5%, #0B3E58 100%);
+    height: 11px;
+    border-radius: 3px 3px 0 0;
+}
+
+.search-item {
+    border-bottom: 1px solid #0B3E58;
+}
+
+.search-item:last-child {
+    border-bottom: none;
+}
+
+.search-body-border span {
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    height: 6px;
+    width: 47px;
+    border-radius: 10px;
+}
+
+.search-item-selected {
+    width: 14px;
+    height: 14px;
+    background: radial-gradient(circle at 80% 6%, #E6F1E6, #188E4C);
+    border: 2px solid #1A9E54;
+    border-radius: 50%;
+    margin-top: -13px;
+}
+
+.search-item-btn {
+    background: linear-gradient(180deg, #FFF -57.5%, #0B3E58 100%);
+    border-radius: 20px;
+}
+
+.search-item-list {
+    max-height: 170px;
+    overflow-y: auto;
+}
+
 /* Search Content End */
 
 /* main content css End */
@@ -345,3 +409,41 @@
 }
 
 /* footer css End  */
+
+/* Contact Serachbar Start */
+.contact-sidebar {
+    width: 450px;
+    top: 247px;
+    left: 0;
+    height: calc(100% - 282px);
+    overflow-y: auto;
+}
+.contact-search input {
+    border: 1px solid #0B3E58;
+    border-radius: 20px;
+    color: #999999;
+}
+.contact-search-icon{
+    top: 50%;
+    right: 25px;
+    transform: translateY(-50%);
+}
+.contact-item-box{
+    border: 1px solid #0B3E58;
+    border-radius: 8px;
+    padding: 20px 38px 15px 24px;
+}
+.contact-add-icon{
+    cursor: pointer;
+}
+.contact-box-line {
+    color: #707070;
+    width: 94%;
+    bottom: 0;
+    left: 22px;
+}
+.contact-red{
+    background: radial-gradient(circle at 80% 6%, #E6F1E6, #CB0E20);
+    border-color: #CB0E20;
+}
+/* Contact Serachbar End */
