--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,7 +2,9 @@
 // Option A: Include all of Bootstrap
 
 // Include any default variable overrides here (though functions won't be available)
-
+$primary: #0B3E58;
+$success: #1CB25E;
+$danger: #CB0E20;
 
 @import "../node_modules/bootstrap/scss/bootstrap";
 
