--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -16,10 +16,16 @@
 .menu-link,
 .megamenu-link {
     color: var(--dark);
+    transition: all 0.3s ease-in-out;
+}
+
+.megamenu-item:hover {
+    transition: all 0.3s ease-in-out;
+    background-color: #98DAFF;
 }
 
 .megamenu-list {
-    width: 170px;
+    width: 150px;
     box-shadow: 0 0 15px #dfe0e1;
     transition: all 0.3s ease-in-out;
     transform: translateY(30px);
@@ -28,7 +34,7 @@
 }
 
 .menu-item:hover {
-    background-color: #00000036;
+    background-color: #99999969;
 }
 
 .menu-item:hover .megamenu-list {
@@ -39,10 +45,39 @@
 }
 
 .header-title {
-    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.header-hamburger {
+    display: none;
+}
+
+.header-hamburger-icon {
+    width: 30px;
+    height: 3px;
+    border-radius: 4px;
+    position: relative;
+    background-color: #818181;
+    transition: all 0.3s ease-in-out;
+}
+
+.menu-list-open .header-hamburger-icon:first-child {
+    transform: rotate(45deg);
+    top: 3px;
+    margin: 0 !important;
+}
+
+.menu-list-open .header-hamburger-icon:nth-child(2) {
+    opacity: 0;
+    margin: 0 !important;
+}
+
+.menu-list-open .header-hamburger-icon:last-child {
+    transform: rotate(-45deg);
+    margin: 0 !important;
+    top: -3px;
 }
 
 /* Header End */
@@ -450,6 +485,10 @@
     overflow-y: auto;
 }
 
+.search-input-mobile{
+    display: none;
+}
+
 /* Search Content End */
 
 /* main content css End */
@@ -462,43 +501,102 @@
 
 /* footer css End  */
 
-/* Contact Serachbar Start */
+/* Contact Sidebar Start */
 .contact-sidebar {
     width: 450px;
     top: 247px;
-    left: 0;
+    left: -100%;
     height: calc(100% - 282px);
     overflow-y: auto;
+    transition: all 0.3s ease-in-out;
 }
+
+.contact-sidebar-open {
+    left: 0;
+    transition: all 0.3s ease-in-out;
+}
+
 .contact-search input {
     border: 1px solid #0B3E58;
     border-radius: 20px;
     color: #999999;
 }
-.contact-search-icon{
+
+.contact-search-icon {
     top: 50%;
     right: 25px;
     transform: translateY(-50%);
 }
-.contact-item-box{
+
+.contact-item-box {
     border: 1px solid #0B3E58;
     border-radius: 8px;
-    padding: 20px 38px 15px 24px;
+    padding: 20px 20px 15px 15px;
+    overflow-y: auto;
+    height: 217px;
 }
-.contact-add-icon{
+
+.contact-add-icon {
     cursor: pointer;
 }
+
 .contact-box-line {
     color: #707070;
     width: 94%;
     bottom: 0;
     left: 22px;
 }
-.contact-red{
+
+.contact-red {
     background: radial-gradient(circle at 80% 6%, #E6F1E6, #CB0E20);
     border-color: #CB0E20;
 }
-/* Contact Serachbar End */
+
+.contact-truck-icon span {
+    top: -5px;
+    right: -14px;
+    color: #13753E;
+    font-family: "Segoe Script";
+}
+
+.contact-sidebar-close {
+    right: 8px;
+    top: 7px;
+    cursor: pointer;
+}
+
+.contact-chat {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: radial-gradient(circle at 80% 6%, #7CDBA6, #149F51);
+    transition: all 0.3s ease-in-out;
+}
+
+.contact-chat:hover {
+    opacity: 0.8;
+    transition: all 0.3s ease-in-out;
+}
+
+.contact-box-item {
+    transition: all 0.3s ease-in-out;
+    padding: 8px 15px;
+    border-radius: 8px;
+}
+
+.contact-box-item:hover {
+    background-color: #e9e9e9;
+    transition: all 0.3s ease-in-out;
+}
+
+.contact-other-icon {
+    width: 30px;
+    height: 30px;
+    box-shadow: 0 0 10px #d1d1d1;
+    border-radius: 50%;
+}
+
+/* Contact Sidebar End */
 
 
 /* Modal button css start  */
@@ -665,3 +763,314 @@
   }
 }
 /* Modal button css End  */
+
+
+/* Responsive css start */
+
+@media (max-width: 1650px){
+    .main-content.main-content-home {
+        height: calc(100vh - 109px);
+    }
+    .header-m-logo {
+        width: 150px;
+        height: 150px;
+    }
+
+    .header-m-content {
+        overflow-x: auto;
+        white-space: nowrap;
+    }
+}
+
+@media (max-width: 1400px){
+    .home-bottom-header-logoitems {
+        width: 360px;
+    }
+
+    .home-bottom-header-logo {
+        height: 180px;
+    }
+
+    .main-content.main-content-home {
+        height: calc(100vh - 106.5px);
+    }
+}
+
+@media (max-width:1300px) {
+    .menu-list {
+        margin-left: 180px;
+    }
+
+    .header-m-content {
+        margin-left: 190px;
+    }
+
+    .bottom-header-content {
+        overflow-x: auto;
+        white-space: nowrap;
+        padding-inline: 15px;
+        justify-content: start !important;
+    }
+
+    .header-title {
+        top: 50%;
+        left: 60%;
+        transform: translate(-60%, -50%);
+    }
+
+    .header-activity-item img {
+        width: 23px;
+    }
+}
+
+@media (max-width: 1200px){
+    .home-bottom-header-logoitems {
+        width: 280px;
+    }
+
+    .home-bottom-header-logo {
+        height: 130px;
+    }
+
+    .home-bottom-header-logo a {
+        width: 170px;
+    }
+
+    .main-content.main-content-home {
+        height: calc(100vh - 102px);
+    }
+}
+
+@media (max-width:1024px) {
+    .menu-list {
+        position: absolute;
+        top: 42px;
+        left: -100%;
+        background-color: #fff;
+        border-radius: 0 10px 10px 0;
+        height: 100vh;
+        z-index: 2;
+        margin-left: 0;
+        overflow-y: auto;
+        width: 200px;
+        display: unset !important;
+        padding: 10px;
+        transition: all 0.3s ease-in-out;
+    }
+
+    .header-hamburger {
+        display: block;
+    }
+
+    .menu-list-open .menu-list {
+        left: 0;
+        transition: all 0.3s ease-in-out;
+    }
+
+    .header {
+        padding: 5px 15px;
+    }
+
+    .header-title {
+        top: unset;
+        left: unset;
+        transform: unset;
+        position: relative !important;
+        width: 100%;
+    }
+
+    .header-duty, .header-currect-job {
+        border-radius: 8px;
+        cursor: pointer;
+        display: block !important;
+    }
+
+    .header-middle {
+        position: absolute !important;
+        right: -270px;
+        top: 42px;
+        background-color: #fff;
+        z-index: 2;
+        padding: 15px;
+        border-radius: 10px 0 0 10px;
+        width: 270px;
+        height: 100vh;
+        overflow-y: auto;
+        display: none;
+        transition: all 0.3s ease-in-out;
+    }
+
+    .header-middle-open {
+        right: 0;
+        display: block;
+        transition: all 0.3s ease-in-out;
+    }
+
+    .header-m-content,
+    .header-m-personal {
+        margin-left: 0;
+        display: unset !important;
+    }
+
+    .header-m-duty {
+        display: unset !important;
+        margin-right: 0 !important;
+    }
+
+    .header-duty-title {
+        margin: 0 0 15px !important;
+        display: flex;
+        align-items: center;
+    }
+
+    .header-duty-title span {
+        margin: 0 0 0 5px !important;
+    }
+
+    .header-duty-time h5 {
+        margin-bottom: 5px;
+        font-size: 16px !important;
+        justify-content: space-between;
+    }
+
+    .header-m-available,
+    .header-m-contact {
+        border-inline: none;
+        padding-inline: 0 !important;
+    }
+
+    .header-m-contact h5 {
+        text-align: start !important;
+    }
+
+    .header-m-contact span {
+        width: 50px;
+        height: 50px;
+        font-size: 30px !important;
+        border-radius: 10px;
+    }
+
+    .header-m-activity {
+        border-left: none;
+    }
+
+    .header-activity-list {
+        flex-wrap: wrap;
+        justify-content: space-around;
+        margin-top: 15px;
+    }
+
+    .header-currect-job {
+        white-space: nowrap;
+    }
+
+    .bottom-header-body {
+        position: absolute;
+        right: -270px;
+        top: 42px;
+        height: 100vh;
+        width: 270px;
+        border-radius: 10px 0 0 10px;
+        padding: 15px;
+        overflow-y: auto;
+        z-index: 2;
+        display: none !important;
+        transition: all 0.3s ease-in-out;
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        -ms-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+    }
+
+    .bottom-header-body-open {
+        right: 0;
+        display: block !important;
+        transition: all 0.3s ease-in-out;
+    }
+
+    .bottom-header-content,
+    .bottom-header-top {
+        display: inline !important;
+        padding-inline: 0;
+    }
+
+    .bottom-header-top button {
+        display: block;
+        margin-bottom: 10px;
+    }
+
+    .bottom-header-top button:last-child {
+        margin-bottom: 0;
+    }
+
+    .bottom-header-title {
+        font-size: 20px !important;
+        margin-bottom: 17px;
+        display: inline-block;
+    }
+
+    .bottom-header-title br {
+        display: none;
+    }
+
+    .bottom-header-top {
+        padding: 10px !important;
+        border-radius: 0;
+        margin-bottom: 15px;
+    }
+
+    .bottom-header-bottom {
+        display: none !important;
+    }
+    .contact-sidebar {
+        top: 41px;
+        height: calc(100% - 73px);
+    }
+    .main-content {
+        height: calc(100dvh - 73px);
+    }
+}
+@media (max-width:992px){
+    .contact-sidebar{
+        width: 300px;
+    }
+    .search-popup {
+        width: 350px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    .search-map {
+        height: auto;
+    }
+    .search-input input::placeholder {
+        font-size: 16px;
+    }
+}
+@media (max-width:576px){
+    .header-title{
+        font-size: 16px !important;
+    }
+}
+@media (max-width:400px){
+    .search-popup {
+        width: 90%;
+    }
+    .search-input {
+        top: unset;
+        left: unset;
+        transform: unset;
+    }
+    .search-input-mobile{
+        display: block;
+    }
+    .search-input{
+        display: none;
+    }
+    .search-input-mobile{
+        display:block;
+    }
+    .nav.nav-tabs{
+        margin-bottom:17px !important;
+    }
+}
+/* Media Query End */
